# semantic-similarities-api

./: .gitignore  .swp  README.md  ruff.toml  run.bat  run.sh
embedding_server/: pyproject.toml
embedding_server/data/: sentences.txt
embedding_server/scripts/: load_embedding_db.py
embedding_server/src/data/: embeddings.json
embedding_server/src/embedding_server/: __init__.py  search.py  server.py  utils.py
embedding_server/src/embedding_server/gibson/: __init__.py  database.py  embedding.py  exceptions.py
embedding_server/tests/: __init__.py  test_embedding_service.py  test_fastapi_endpoints.py
